--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "dependencies": {
     "jquery": "^3.4.0",
     "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-watch": "^5.0.1"
   }
 }
