--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "avengers2019",
   "version": "1.0.0",
+  "scripts": {
+    "build": "webpack",
+    "watch": "gulp watch"
+  },
   "dependencies": {
     "jquery": "^3.4.0",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
+    "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-postcss": "^8.0.0",
     "gulp-watch": "^4.3.5",
+    "postcss-import": "^12.0.1",
+    "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.2",
-    "postcss-simple-vars": "^5.0.2"
+    "postcss-simple-vars": "^5.0.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^2.2.0-rc.0"
   }
 }
